# bookstore-SeaORM-Rocket-JWT

./: .env  Cargo.toml  README.md
src/: main.rs
src/auth/: mod.rs
src/controllers/: auth.rs  authors.rs  books.rs  mod.rs
src/db/: mod.rs
src/entities/: author.rs  book.rs  mod.rs  prelude.rs  user.rs
src/fairings/: cors.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20250523_142601_create_author_table.rs  m20250523_143635_create_book_table.rs  mod.rs
