[package]
name = "bookstore"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
sea-orm = { version = "1.1.11", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls"
] }
sea-orm-migration = "1.1.11"
